--- a/mystyle.css
+++ b/mystyle.css
@@ -1,21 +1,12 @@
-/* body.ind {
-    background-color: #fff;
-    
-} */
-
 body {
     position: relative;
 }
 
 .bg-img {
-    /* The image used */
-    /* background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("Picture/flower1.jpg"); */
     height: 130px;
-    /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    /* Needed to position the navbar */
     position: relative;
 }
 
@@ -73,11 +64,38 @@ hr {
 }
 
 .containerunderline {
-    width: 1110px;
+    width: auto;
     height: 10px;
     background-color: #f2c102;
     margin-top: 1rem;
     margin-bottom: 1rem;
     border: 10;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.results tr[visible='false'],
+.no-result {
+    display: none;
+}
+
+.results tr[visible='true'] {
+    display: table-row;
+}
+
+.counter {
+    padding: 8px;
+    color: #ccc;
+}
+
+.form-row {
+    padding-right: 5px;
+    padding-left: 200px;
+}
+
+.form-inline {
+    margin-left: 135px;
+}
+
+.card {
+    background-color: lightyellow;
 }
