--- a/mystyle.css
+++ b/mystyle.css
@@ -2,6 +2,11 @@ body {
     position: relative;
 }
 
+.container-login {
+    width: 100%;
+    min-height: 100vh;
+}
+
 .bg-img {
     height: 130px;
     background-position: center;
@@ -98,4 +103,88 @@ hr {
 
 .card {
     background-color: lightyellow;
+}
+
+.container-box {
+    width: 390px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+    border-radius: 10px;
+    padding-left: 55px;
+    padding-bottom: 30px;
+    padding-top: 80px;
+    padding-right: 55px;
+}
+
+.container-login {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    z-index: 1;
+}
+
+.form-input {
+    font-family: SourceSansPro-Bold;
+    font-size: 16px;
+    color: #4b2354;
+    line-height: 1.2;
+    display: block;
+    width: 100%;
+    height: 62px;
+    background: transparent;
+    padding: 0 20px 0 23px;
+    outline: none;
+    /* border: none; */
+    border-radius: 25px;
+}
+
+.m-b-20 {
+    margin-bottom: 20px;
+}
+
+.m-b-37 {
+    margin-bottom: 37px;
+}
+
+.m-b-27 {
+    margin-bottom: 27px;
+}
+
+.p-t-57 {
+    padding-top: 57px;
+}
+
+.p-b-20 {
+    padding-bottom: 20px;
+}
+
+.m-b-100 {
+    margin-top: 50px;
+    margin-right: 50px;
+    margin-left: 50px;
+}
+
+.btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px;
+    min-width: 160px;
+    height: 50px;
+    background-color: #2F89FC;
+    border-radius: 25px;
+    font-family: SourceSansPro-SemiBold;
+    font-size: 14px;
+    color: #fff;
+    line-height: 1.2;
+    text-transform: uppercase;
 }
